--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>моя первая веб-страница</title>
+        <title>Low-code на 1С</title>
     </head>
     <body>
-        <p>Hello, World!</p>
+        <p>Работаем с git</li>
+
+        </ol>
     </body>
 </html>
