Удаление экспериментов из readme

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Low-code на 1С</title>
+        <title>Low-code на 1C</title>
     </head>
     <body>
         <p>Работаем с git</li>
